// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render expense list filter 1`] = `
<DocumentFragment>
  <input
    placeholder="filter by text"
    type="text"
    value=""
  />
  <select
    data-testid="select-filter"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
    >
      <svg
        class="react-datepicker__calendar-icon "
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
        />
      </svg>
      <input
        class=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
    >
      <svg
        class="react-datepicker__calendar-icon "
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
        />
      </svg>
      <input
        class=""
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`render expense list second filter 1`] = `
<DocumentFragment>
  <input
    placeholder="filter by text"
    type="text"
    value="bill"
  />
  <select
    data-testid="select-filter"
  >
    <option
      value="date"
    >
      Date
    </option>
    <option
      value="amount"
    >
      Amount
    </option>
  </select>
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
    >
      <svg
        class="react-datepicker__calendar-icon "
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
        />
      </svg>
      <input
        class=""
        type="text"
        value="12/31/1969"
      />
      <button
        aria-label="Close"
        class="react-datepicker__close-icon"
        tabindex="-1"
        type="button"
      />
    </div>
  </div>
  <div
    class="react-datepicker-wrapper"
  >
    <div
      class="react-datepicker__input-container react-datepicker__view-calendar-icon"
    >
      <svg
        class="react-datepicker__calendar-icon "
        viewBox="0 0 448 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M96 32V64H48C21.5 64 0 85.5 0 112v48H448V112c0-26.5-21.5-48-48-48H352V32c0-17.7-14.3-32-32-32s-32 14.3-32 32V64H160V32c0-17.7-14.3-32-32-32S96 14.3 96 32zM448 192H0V464c0 26.5 21.5 48 48 48H400c26.5 0 48-21.5 48-48V192z"
        />
      </svg>
      <input
        class=""
        type="text"
        value=""
      />
      <button
        aria-label="Close"
        class="react-datepicker__close-icon"
        tabindex="-1"
        type="button"
      />
    </div>
  </div>
</DocumentFragment>
`;
